# EAG_V3_session_6

./: .env.example  .gitignore  README.md  pyproject.toml
agent6/: action.py  agent6.py  artifacts.py  decision.py  mcp_server.py  memory.py  perception.py  schemas.py
docs/sample_outputs/: README.md
docs/sample_outputs/sandbox/reminders/: mom_birthday_2026-05-15.txt  mom_birthday_2weeks_2026-05-01.txt
docs/sample_outputs/state/: artifacts_index.json  memory.json
